Updated readme for lenience.

--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 GOLD GETTER
 
+I wrote most of this code in a span of about 5-8 hours before this project was
+originally due. I also had only been programming for a few months at that
+point so don't judge me too harshly haha. I didn't understand what objects
+were. -- 2022 Stephen
+
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 This is a hack of an old project I made to add pygame for display. I used heavily
 from this tutorial:
